# rorrim

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  mirrorlist
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
rorrim/: FETCH_HEAD  config  packed-refs
rorrim/objects/pack/: pack-24b5463a8992bb0c1d7269c4e1dece14fa54789e.idx  pack-24b5463a8992bb0c1d7269c4e1dece14fa54789e.pack
src/: cli.rs  main.rs  mirrors.rs  opts.rs  request.rs
src/mirrorlist/: mirror.rs  mod.rs
