[package]
name = "rorrim"
version = "0.1.0"
authors = ["Kleidi Bujari"]
edition = "2021"
description = "Generate mirrorlist for Arch Linux"
homepage = "https://github.com/kbujari/rorrim"
documentation = "https://github.com/kbujari/rorrim"
repository = "https://github.com/kbujari/rorrim"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4.31"
clap = { version = "4.4.13", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true
